# Windows-Theme-Autochanger

./: README.md  go.mod  main.go  windows-theme-autochanger.exe.manifest
docs/Writerside/: i.tree  redirection-rules.xml  writerside.cfg
docs/Writerside/topics/: Developer.md  Help.md  Installer-To-do.md  Roadmap.md  Windows-App-Store.md  markdown sample.md  starter-topic.md
service/: daemon.go  install.go  service.go
src/: .gitignore  admin_windows.go  go.sum  installer-specification.wxs  meson.build
src/cmd/service/: main.go  windows-theme-autochanger-service.exe.manifest
src/service/: functions.go
